--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
     </table>
     <h1>Color table creation:</h1>
     <a href="index01.html">Next One.</a>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi eveniet, reiciendis ut cumque labore unde. Repellat non autem magnam ab perferendis impedit reiciendis ipsam doloremque? Officia nostrum eius quisquam?</p>
 </body>
 </html>
