--- a/index01.html
+++ b/index01.html
@@ -37,6 +37,6 @@
             <td class="dado12">N12</td>
         </tr>
     </table>
-    <a href="index02.html">Next one.</a>
+    <a href="index02.html"><h2>Next one.</h2></a>
 </body>
 </html>
