--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </tr>
     </table>
     <h1>Color table creation:</h1>
-    <a href="index01.html">Next One.</a>
+    <a href="index01.html"><h2>Next One.</h2></a>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo sequi eveniet, reiciendis ut cumque labore unde. Repellat non autem magnam ab perferendis impedit reiciendis ipsam doloremque? Officia nostrum eius quisquam?</p>
 </body>
 </html>
